[project]
name = "sd-forge"
version = "0.0.1"
license = "AGPL-3.0-or-later"
authors = [
  { name = "lllyasviel" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
keywords = ["artificial intelligence", "computer vision", "stable diffusion", "GUI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "accelerate==0.31.0",
    "blendmodes==2022",
    "clean-fid==0.1.35",
    "diffusers==0.31.0",
    "diskcache==5.6.3",
    "einops==0.4.1",
    "facexlib==0.3.0",
    "fastapi==0.104.1",
    "gitpython==3.1.32",
    "gradio==4.40.0",
    "gradio-imageslider==0.0.20",
    "gradio-rangeslider==0.0.6",
    "httpcore==0.15",
    "httpx==0.24.1",
    "huggingface-hub==0.26.2",
    "inflection==0.5.1",
    "jsonmerge==1.8.0",
    "kornia==0.6.7",
    "lark==1.1.2",
    "loadimg==0.1.2",
    "numpy==1.26.2",
    "omegaconf==2.2.3",
    "open-clip-torch==2.20.0",
    "peft==0.13.2",
    "piexif==1.1.3",
    "pillow==9.5.0",
    "pillow-avif-plugin==1.4.3",
    "protobuf==3.20.0",
    "psutil==5.9.5",
    "pydantic==2.8.2",
    "pytorch-lightning==1.9.4",
    "resize-right==0.0.2",
    "safetensors==0.4.2",
    "scikit-image==0.21.0",
    "setuptools==69.5.1",
    "spandrel==0.3.4",
    "spandrel-extra-arches==0.1.1",
    "tomesd==0.1.3",
    "torch>=2.8.0",
    "torchdiffeq==0.2.3",
    "torchsde==0.2.6",
    "tqdm==4.66.1",
    "transformers==4.46.1",
]


[tool.ruff]

target-version = "py310"

[tool.ruff.lint]

extend-select = [
  "B",
  "C",
  "I",
  "W",
]

exclude = [
	"extensions",
	"extensions-disabled",
	"modules_forge",
	"modules",
	"ldm_patched",
	"extensions-builtin",
]

ignore = [
	"E501", # Line too long
	"E721", # Do not compare types, use `isinstance`
	"E731", # Do not assign a `lambda` expression, use a `def`

	"I001", # Import block is un-sorted or un-formatted
	"C901", # Function is too complex
	"C408", # Rewrite as a literal
	"W605", # invalid escape sequence, messes with some docstrings
]

[tool.ruff.lint.per-file-ignores]
"webui.py" = ["E402"]  # Module level import not at top of file

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.security.HTTPBasic"]

[tool.pytest.ini_options]
base_url = "http://127.0.0.1:7860"
