[project]
name = "sd-forge"
version = "0.0.1"
license = "AGPL-3.0-or-later"
authors = [
  { name = "lllyasviel" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
keywords = ["artificial intelligence", "computer vision", "stable diffusion", "GUI"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "GitPython",
  "Pillow==9.5.0",
  "accelerate",
  "blendmodes",
  "clean-fid",
  "diskcache",
  "einops",
  "facexlib",
  "fastapi==0.104.1",
  "gradio==4.40.0",
  "inflection",
  "jsonmerge",
  "kornia",
  "lark",
  "numpy",
  "omegaconf",
  "open-clip-torch",
  "piexif",
  "protobuf==3.20.0",
  "psutil",
  "pytorch_lightning",
  "resize-right",
  "safetensors",
  "scikit-image>=0.19",
  "spandrel==0.3.4",
  "spandrel-extra-arches==0.1.1",
  "tomesd",
  "transformers==4.46.1",
  "pillow-avif-plugin==1.4.3",
  "diffusers",
  "gradio_rangeslider==0.0.6",
  "gradio_imageslider==0.0.20",
  "loadimg",
  "tqdm",
  "peft",
  "pydantic==2.8.2",
  "huggingface-hub",
  "torch",
  "torchdiffeq",
  "torchsde",
  "sentencepiece>=0.2.1",
  "joblib>=1.5.2",
  "insightface>=0.7.3",
  "bitsandbytes==0.45.3",
  "ngrok>=1.4.0",
]

#[[tool.uv.index]]
#name = "pytorch-cu121"
#url = "https://download.pytorch.org/whl/cu121"

#[tool.uv.sources]
#torch = [
#  { index = "pytorch-cu121" },
#]


[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = [
  "B",
  "C",
  "I",
  "W",
]

exclude = [
  "extensions",
  "extensions-disabled",
  "modules_forge",
  "modules",
  "ldm_patched",
  "extensions-builtin",
]

ignore = [
	"E501", # Line too long
	"E721", # Do not compare types, use `isinstance`
	"E731", # Do not assign a `lambda` expression, use a `def`

	"I001", # Import block is un-sorted or un-formatted
	"C901", # Function is too complex
	"C408", # Rewrite as a literal
	"W605", # invalid escape sequence, messes with some docstrings
]

[tool.ruff.lint.per-file-ignores]
"webui.py" = ["E402"]  # Module level import not at top of file

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.security.HTTPBasic"]

[tool.pytest.ini_options]
base_url = "http://127.0.0.1:7860"
